--- a/src/manifest.json
+++ b/src/manifest.json
@@ -11,7 +11,9 @@
     "persistent": true
   },
   "browser_action": {
-    "default_title": "Inject!"
+    "default_title": "Inject!",
+    "default_icon": "icon.png",
+    "default_popup": "popup.html"
   },
   "permissions": [
     "https://*/*",
