영문 키 감지하여 alert 이벤트 발생시킴

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -10,6 +10,12 @@
     ],
     "persistent": true
   },
+  "content_scripts": [
+    {
+      "matches": ["https://*/*"],
+      "js": ["contentScript.js"]
+    }
+  ],
   "browser_action": {
     "default_title": "Inject!",
     "default_icon": "icon.png",
