--- a/src/manifest.json
+++ b/src/manifest.json
@@ -19,7 +19,8 @@
   ],
   "web_accessible_resources": [
     "detection.js",
-    "animation.html"
+    "animation.html",
+    "img/*"
   ],
   "browser_action": {
     "default_title": "Inject!",
