--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Tension Up",
-  "version": "0.0.1",
+  "name": "Run! Developer Run! (RDR)",
+  "version": "1.3",
   "manifest_version": 2,
   "description": "타자 속도에 반응하는 Live 웹테마 >_<",
   "homepage_url": "https://hiseon.me",
@@ -12,7 +12,7 @@
   },
   "content_scripts": [
     {
-      "matches": ["https://*/*"],
+      "matches": ["<all_urls>"],
       "js": ["contentScript.js", "animation.js"],
       "css": ["animation.css"]
     }
