--- a/src/manifest.json
+++ b/src/manifest.json
@@ -25,7 +25,7 @@
   ],
   "browser_action": {
     "default_title": "Inject!",
-    "default_icon": "icon.png",
+    "default_icon": "img/app_icon.png",
     "default_popup": "popup.html"
   },
   "permissions": [
